[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Just for practice"
authors = ["Matias Bertani <matiasbertani@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
